Fix for Navigation Bar
The highlight color now covers the text entirely and the containers now flex to the length of the text

Also shortened the width of the icon containers

--- a/chilltouchcss.css
+++ b/chilltouchcss.css
@@ -183,9 +183,9 @@ div{
     padding-top: 2%;
     text-align:center;
     margin:0;
-    display:block;
+    display: inline-block;
     min-width: 50px;
-    max-width: 75px;
+    max-width: 100%;
     display: inline-block;
     transition-property: all;
     transition-duration: 0.75s;
@@ -209,7 +209,7 @@ div{
 }
 .fa{
     font-size: 2.5em;
-    width: 100px;
+    width: 50px;
     text-align: center;
     text-decoration: none;
     transition-property: all;
